# changelog-rust

./: .changelogrc  .gitignore  CHANGELOG.md.hbs  Cargo.toml  LICENSE  README  README.md
.cargo-husky/hooks/: pre-push
.github/: ci.yml
.github/workflows/: ci.yml  push.yml  release.yml
.github/workflows/setup/: action.yml
changes/: bugfix_fix-release- 2-May-2021T20_32_28.json  bugfix_fix-release- 2-May-2021T20_32_57.json  bugfix_fix-release- 2-May-2021T20_33_07.json  bugifx_add-changelog-lock-release-11-May-2021T06_11_28.json  feature_fix-build- 2-May-2021T03_26_05.json  feature_linter-16-May-2021T01_46_46.json  feature_require-change-file-11-May-2021T04_55_23.json  feature_require-change-file-11-May-2021T04_55_50.json  feature_template-enhancement- 5-May-2021T08_15_26.json  main- 3-May-2021T01_09_43.json  main- 3-May-2021T01_10_08.json  main- 3-May-2021T01_13_27.json  main-12-May-2021T07_25_26.json  main-12-May-2021T07_25_47.json  master- 1-May-2021T06:32:06.json
install/: unix.sh  windows.ps1
src/: asset.rs  main.rs
src/assets/: CHANGELOG.md.hbs
src/cli/: app.rs  generate.rs  init.rs  merge.rs  mod.rs
src/commands/: generate.rs  init.rs  merge.rs  mod.rs
src/date/: mod.rs
src/error/: mod.rs
src/fs/: mod.rs
src/git/: mod.rs
src/json/: change_file.rs  config.rs  mod.rs  my_date_format.rs  serializable.rs
