[package]
name = "changelog-cli"
version = "0.1.0"
authors = ["Adam Bratin <adam.bratin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.*"
dialoguer = "0.8.*"
futures = { version = "0.3.*" }
glob = "0.3.*"
maplit = "1.0.*"
mustache = "0.9.*"
path-absolutize = "3.0.*"
packer = "0.5.*"
sanitize-filename = "0.3.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
structopt = "0.3.*"
strum = "0.20"
strum_macros = "0.20"
tokio = {version = "0.2.*", features = ["full"] }

[dev-dependencies]
cargo-husky = {version = "1.5.*",default-features = false, features = ["user-hooks"] }
